finish media query styling for tours section

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -208,12 +208,16 @@
   @include respond(tab-port){
 
     height: auto;
+    border-radius: 3px;
+    background-color: $color-white;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
 
     &__side {
       font-size: 2rem; // still need this?
       height: auto;
       position: relative;
-      border-radius: 3px;
+      box-shadow: none;
+      
 
       &--back{
         transform: rotateY(0);
@@ -225,6 +229,10 @@
       transform: rotateY(0);
     }
 
+    &__details {
+      padding: 1rem 3rem;
+    }
+
     // FRONT SIDE STYLING
     &__cta {
       position: relative;
@@ -232,7 +240,7 @@
       left: 0;
       transform: translate(0);
       width: 100%;
-      padding: 4rem;
+      padding: 7rem 4rem 4rem 4rem;
     }
 
     &__price-box {
@@ -240,7 +248,7 @@
     }
 
     &__price-value {
-      font-size: 6rem;
+      font-size: 4rem;
     }    
   }
 }
