--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -9,6 +9,16 @@
   font-size: $default-font-size;
   transform: skewX(-12deg);
 
+  @include respond(tab-port) {
+    width: 100%;
+    padding: 4rem;
+    padding-left: 7rem;
+  }
+
+  @include respond(phone){
+    transform: skewX(0);
+  }
+
   &__shape {
     width: 15rem;
     height: 15rem;
@@ -29,6 +39,10 @@
 
     // lets __caption be positioned relative to this 
     position: relative;
+
+    @include respond(phone){
+      transform: translateX(-3rem) skewX(0);
+    }
   }
 
   &__img {
@@ -44,6 +58,10 @@
 
   &__text {
     transform: skewX(12deg);
+    
+    @include respond(phone){
+      transform: skewX(0);
+    }
   }
 
   &__caption {
