--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -21,6 +21,10 @@
     display: block;
     transition: all .3s;
 
+    @include respond(tab-port) {
+      width: 100%;
+    }
+
       // removes default blue border and adds custom focus styling
     &:focus {
       outline: none;
@@ -63,6 +67,11 @@
     // used instead of floats to set radio buttons side-by-side
     width: 49%;
     display: inline-block;
+
+    @include respond(tab-port) {
+      width: 100%;
+      margin-bottom: 2rem;
+    }
   }
 
   &__radio-input {
