--- a/css/style.css
+++ b/css/style.css
@@ -821,7 +821,7 @@ body {
   /* sets to 95% of the viewport height */
   height: 95vh;
   /* gradient goes before img to layer on top */
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero-small.jpg);
   /* fits bg image to width of element; stretches img if necessary */
   background-size: cover;
   /* keeps top-center of img aligned with top-center of viewport; top is never cropped*/
@@ -835,6 +835,9 @@ body {
   /* .logo-box:hover {
     animation: moveInRight 1s ease-out; 
   } */ }
+  @media (min-resolution: 192dpi) and (min-width: 600px) {
+    .header {
+      background-image: linear-gradient(to right bottom, rgba(255, 185, 0, 0.8), rgba(255, 119, 48, 0.8)), url(../img/hero.jpg); } }
   @media (max-width: 37.5em) {
     .header {
       -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
