--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -10,6 +10,8 @@
   opacity: 0;
   visibility: hidden;
   transition: all .3s;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
 
   &__content {
     @include center;
