--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -27,8 +27,8 @@
       background-image: 
         linear-gradient(
           to right bottom, 
-          rgba($color-secondary-light, 0.8), 
-          rgba($color-secondary-dark, 0.8)
+          rgba($color-primary-light, 0.8), 
+          rgba($color-primary-dark, 0.8)
         ), 
         url(../img/hero.jpg)
       ;
