--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -10,8 +10,13 @@
   opacity: 0;
   visibility: hidden;
   transition: all .3s;
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
+
+  // if the browser supports backdrop filter...
+  @supports (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)) {
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background-color: rgba($color-black, .3);
+  }
 
   &__content {
     @include center;
