add webkit backface visibility for tours card flip support for safari

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -17,6 +17,8 @@
     left: 0;
     width: 100%;
     // hides the back of an element when flipped
+    // webkit for safari support, but probably no longer need
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
 
     border-radius: 3px;
