--- a/css/style.css
+++ b/css/style.css
@@ -825,7 +825,7 @@ body {
 
 .header {
   /* sets to 95% of the viewport height */
-  height: 95vh;
+  height: 85vh;
   /* gradient goes before img to layer on top */
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero-small.jpg);
   /* fits bg image to width of element; stretches img if necessary */
@@ -834,13 +834,16 @@ body {
   background-position: top;
   /* need to set to relative so that 'position: absolute' in children will allow positioning relative to parent */
   position: relative;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   /* just an example of applying animations elsewhere than h1 */
   /* not working correctly... */
   /* .logo-box:hover {
     animation: moveInRight 1s ease-out; 
   } */ }
+  @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+    .header {
+      -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+      clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+      height: 95vh; } }
   @media (min-resolution: 192dpi) and (min-width: 37.5em), (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), (min-width: 125em) {
     .header {
       background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg); } }
