--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,6 @@
 .header {
   /* sets to 95% of the viewport height */
-  height: 95vh;
+  height: 85vh;
   /* gradient goes before img to layer on top */
   background-image: 
     linear-gradient(
@@ -18,8 +18,11 @@
   /* need to set to relative so that 'position: absolute' in children will allow positioning relative to parent */
   position: relative;
 
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+  @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+    height: 95vh;
+  }
 
   @media 
     (min-resolution: 192dpi) and (min-width: 37.5em),
