--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,10 @@ body {
     body {
       padding: 0; } }
 
+::selection {
+  background-color: #55c57a;
+  color: #fff; }
+
 body {
   /* font styling for child elements to inherit */
   font-family: "Lato", sans-serif;
