--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -25,10 +25,10 @@
   }
 
   @media 
-    (min-resolution: 192dpi) and (min-width: 37.5em),
+    only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
     // for safari support
-    (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), 
-    (min-width: 125em) {
+    only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), 
+    only screen and (min-width: 125em) {
       background-image: 
         linear-gradient(
           to right bottom, 
